--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ jobs:
     - name: restore package
       run: |
         nuget sources add -name "private-packages" -Source https://nuget.pkg.github.com/yanjingzhu/index.json -StorePasswordInClearText -Username yanjingzhu -Password ${env:Password}
-        dotnet add ConsoleApp1 package ConsoleApp3 --version 1.0.0
+        dotnet restore ConsoleApp1 
       working-directory: ConsoleApp1
       env: 
         Password: ${{ secrets.PackagePAT }}
